Resolved CSS Alignment Issues

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,7 +7,7 @@
     text-align: center;
     background-color: rgb(126, 126, 126);
     margin: 0px;
-    align-items: center;
+    padding-top: 10px;
 }
 
 body {
@@ -28,6 +28,10 @@ P {
     border-radius: 10px;
     background-color: #1f1f1f;
     width: 500px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .statement-text {
@@ -66,6 +70,7 @@ P {
     display: inline-block;
     background-color: #1f1f1f;
     border-radius: 10px;
+    margin-top: 10px;
     padding: 12px;
     color: whitesmoke;
     min-width: 710px;
@@ -100,6 +105,7 @@ P {
 }
 
 .graph-div {
+    padding-top: 10px;
     text-align: center;
     display: flex;
     justify-content: center;
